<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".Fragments.CadastroFragment"
                                                   android:id="@+id/constraintLayout2"
                                                   android:background="@color/white" android:layout_margin="16dp">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:id="@+id/linearLayout"
                      app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent">
            <TextView
                    android:text="@string/instrucoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lblInstrucoes"
                    android:textSize="18sp"/>
            <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000"
                    android:layout_marginTop="10dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome"
                    android:id="@+id/lblNome"
                    android:layout_marginTop="16dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtNome"
                    android:minHeight="48dp" android:layout_marginTop="10dp"
                    android:hint="@string/nome_hint"
                    android:textColorHint="#757575"/>
            <TextView
                    android:text="@string/endereco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lblEndereco"
                    android:layout_marginTop="14dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtEndereco"
                    android:hint="@string/endereco_hint"
                    android:layout_marginTop="10dp" android:minHeight="48dp"
                    android:textColorHint="#757575"/>
            <TextView
                    android:text="@string/estado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lblEstado"
                    android:layout_marginTop="14dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtEstado"
                    android:minHeight="48dp" android:layout_marginTop="10dp"
                    android:hint="@string/estado_hint" android:textColorHint="#757575"/>
            <TextView
                    android:text="@string/cidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lblCidade"
                    android:layout_marginTop="14dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtCidade"
                    android:layout_marginTop="10dp"
                    android:hint="@string/cidade_hint" android:textColorHint="#757575"/>
            <TextView
                    android:text="@string/telefone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lblTelefone"
                    android:layout_marginTop="14dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/txtTelefone"
                    android:layout_marginTop="10dp"
                    android:hint="@string/telefone_hint" android:textColorHint="#757575"/>
            <TextView
                    android:text="@string/e_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lblEmail"
                    android:layout_marginTop="14dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/txtEmail"
                    android:layout_marginTop="10dp" android:hint="@string/email_hint"
                    android:textColorHint="#757575"/>
            <Button
                    android:text="@string/cadastrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btnCadastrar"
                    android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>