<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".Fragments.TelaInicialFragment"
                                                   android:id="@+id/constraintLayout" android:background="@color/white"
                                                   android:layout_margin="16dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/titulo_app"
            android:id="@+id/lblTituloApp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"
            android:textAlignment="center" android:textSize="18sp"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/boas_vindas"
            android:id="@+id/lblBoasVindas" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"
            android:textAlignment="center" android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.843" app:layout_constraintTop_toBottomOf="@+id/lblTituloApp"/>
    <Button
            android:text="@string/tela_de_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnTelaCadastro"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblBoasVindas" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>